# signed-store

./: Cargo.toml
src/: main.rs  pgp.rs  store.rs
